@@ -179,7 +179,7 @@ VPR_PATH([0.27.6], , [AC_MSG_ERROR([*** VPR required for Gadgeteer ***])])
 JCCL_PATH_CXX([0.12.0], ,
               [AC_MSG_ERROR([*** JCCL C++ API required for Gadgeteer ***])])
 
-min_tweek_ver='0.13.1'
+min_tweek_ver='0.15.0'
 
 TWEEK_PATH_CXX([$min_tweek_ver], [HAVE_TWEEK_CXX='Y'],
    [AC_MSG_WARN([*** Tweek C++ required for gadget::TweekGadget ***])
